[gd_scene load_steps=11 format=2]

[ext_resource path="res://Grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Dollset.tscn" type="PackedScene" id=2]
[ext_resource path="res://dolls_green.tres" type="Texture" id=3]
[ext_resource path="res://dolls_red.tres" type="Texture" id=4]
[ext_resource path="res://yourTurn.gd" type="Script" id=5]
[ext_resource path="res://font_default.tres" type="DynamicFont" id=6]
[ext_resource path="res://playAgain.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="InputEventKey" id=1]
unicode = 20

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="Main" type="Node2D"]

[node name="background" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 256.0
mouse_filter = 2
color = Color( 0.960784, 1, 0.294118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" parent="." instance=ExtResource( 1 )]
position = Vector2( 184, 56 )

[node name="Dollset1" parent="." instance=ExtResource( 2 )]
position = Vector2( 40, 40 )
doll_texture = ExtResource( 3 )
is_first_turn = true

[node name="Dollset2" parent="." instance=ExtResource( 2 )]
position = Vector2( 360, 40 )
doll_texture = ExtResource( 4 )

[node name="yourTurn" type="Label" parent="."]
margin_left = 8.0
margin_top = 16.0
margin_right = 176.0
margin_bottom = 40.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.831373, 0.341176, 0.835294, 1 )
text = "Your turn"
align = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player1" type="Label" parent="."]
margin_left = 192.0
margin_top = 216.0
margin_right = 239.0
margin_bottom = 239.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "12"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vs" type="Label" parent="."]
margin_left = 247.0
margin_top = 216.0
margin_right = 268.0
margin_bottom = 239.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "vs"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player2" type="Label" parent="."]
margin_left = 276.0
margin_top = 216.0
margin_right = 307.0
margin_bottom = 239.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "34"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playAgain" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 200.0
margin_top = 120.0
margin_right = 311.0
margin_bottom = 149.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.733333, 0.262745, 0.262745, 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Play again"
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="game_tie" from="Dollset1" to="yourTurn" method="_on_Dollset_game_tie"]
[connection signal="turn_over" from="Dollset1" to="Dollset2" method="_on_Dollset_turn_over"]
[connection signal="turn_over" from="Dollset1" to="yourTurn" method="_on_Dollset1_turn_over"]
[connection signal="game_tie" from="Dollset2" to="yourTurn" method="_on_Dollset_game_tie"]
[connection signal="turn_over" from="Dollset2" to="Dollset1" method="_on_Dollset_turn_over"]
[connection signal="turn_over" from="Dollset2" to="yourTurn" method="_on_Dollset2_turn_over"]
[connection signal="pressed" from="playAgain" to="playAgain" method="_on_playAgain_pressed"]
